crates/compiler/tests/parse_errors/pattern_float.elm
module Main exposing (..)

x = case 1 of
  1.5 -> 1
